WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299192
`element.scrollTo` / `element.scrollBy` do not work on text inputs
https://bugs.webkit.org/show_bug.cgi?id=299192
Summary
`element.scrollTo` / `element.scrollBy` do not work on text inputs
Tim Nguyen (:ntim)
Reported
2025-09-19 10:54:23 PDT
``` <style> #inputscroller { width: 100px; height: 50px; } </style> <input type="text" id="inputscroller" value="qwertyuiopasddfghjklzxcvbnmqwertyuiopasddfghjklzxcvbnmqwer"> <script>inputscroller.scrollTo(20, 0)</script> ``` This won't work because we don't forward the scrollTo call to the inner input, like we do when setting scrollLeft/scrollTop
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-19 13:58:46 PDT
<
rdar://problem/160963921
>
Tim Nguyen (:ntim)
Comment 2
2025-09-19 14:01:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51032
Tim Nguyen (:ntim)
Comment 3
2025-09-19 15:39:58 PDT
https://github.com/web-platform-tests/wpt/pull/54960
EWS
Comment 4
2025-09-19 20:13:00 PDT
Committed
300274@main
(2638b49042d8): <
https://commits.webkit.org/300274@main
> Reviewed commits have been landed. Closing PR #51032 and removing active labels.
carlosmanuelortegatorres8
Comment 5
2025-09-20 00:00:21 PDT
(In reply to Radar WebKit Bug Importer from
comment #1
)
> <
rdar://problem/160963921
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug