`element.scrollTo` / `element.scrollBy` don't work on text inputs https://bugs.webkit.org/show_bug.cgi?id=299192 rdar://160963921

Reviewed by Simon Fraser.

Forward calls for setScrollPosition to the inner text element, just like we already do on scrollLeft/scrollTop.

Also check hasNonVisibleOverflow() on the inner text element.

* LayoutTests/imported/w3c/web-platform-tests/dom/events/scrolling/scrollend-fires-to-text-input-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/dom/events/scrolling/scrollend-fires-to-text-input.html:
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::scrollTo):
* Source/WebCore/rendering/RenderBox.h:
* Source/WebCore/rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::innerTextElementHasNonVisibleOverflow const):
(WebCore::RenderTextControlSingleLine::setScrollPosition):
* Source/WebCore/rendering/RenderTextControlSingleLine.h:

Canonical link: https://commits.webkit.org/300274@main